<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/back_signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_login4"
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/first"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/first"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/last"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/last"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/confirm_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/email"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/confirm_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/address"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/address"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/address"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/address2"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/country"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/country"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/city"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/city"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/state"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/state"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/password"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/signup_page_button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>